Change image source from .jpg to .jpg.JPG
Updated image source extension for Naruto and Hinata.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ to { transform: scale(2); opacity: 0; }
 <h1>💖 I knew you’d say yes, Rani 💖<br>You made me the happiest</h1>
 
 <!-- Naruto & Hinata image (replace if you want another one) -->
-<img src="naruto.jpg" alt="Naruto and Hinata">
+<img src="naruto.jpg.JPG" alt="Naruto and Hinata">
 
 </div>
 
