--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ margin: 0;
 height: 100vh;
 background: linear-gradient(135deg, #ffd6e0, #fff2c6);
 font-family: system-ui, sans-serif;
-overflow: hidden;
+overflow: auto;
 }
 
 /* Center card */
