--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ margin: 0;
 height: 100vh;
 background: linear-gradient(135deg, #ffd6e0, #fff2c6);
 font-family: system-ui, sans-serif;
-overflow: auto;
+overflow: hidden;
 }
 
 /* Center card */
@@ -69,7 +69,9 @@ color: #d63384;
 }
 
 #final img {
-max-width: 90%;
+max-width: 90vw;
+max-height: 70vh;
+object-fit: contain;
 border-radius: 20px;
 margin-top: 20px;
 }
